--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
-# Compiled class file
+.DS_Store
+.classpath
+.project
+.pmd
+.checkstyle
+*.iml
+*.ipr
+*.iws
+*.log
+*.jsonl
+build.browser.properties
+.vscode/*
+out/
+.sonar/
+.settings/
+.gradle/
+target/
+logs/
+build/
+bin/
+classes/
+generated/
+__generated__/
+!generated/.openapi-generator-ignore
+*.zip
+*.tgz
 *.class
 
-# Log file
-*.log
+structurizr*.json
 
-# BlueJ files
-*.ctxt
+#antora entries
+node_modules/
+.cache/
+npm-cache/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# scans
+fossa
+JFrogXRayScanReport*.pdf
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+.docker
