Remove unused Topics and classes related to

--- a/sensor-service/src/main/resources/application.yml
+++ b/sensor-service/src/main/resources/application.yml
@@ -10,3 +10,6 @@ spring:
 #          topic-name: sensors_ingest
 #          schema-info:
 #            schema-type: JSON
+
+logging.level:
+  org.apache.pulsar: info
