--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,11 @@
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^4.3.1"
   },
+  "overrides": {
+    "react-scripts": {
+      "@svgr/webpack": "8.0.1"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
